P5 Glove/include/P5DLL.bas


' Filters
Public Declare Sub P5_SetInterfaceMode Lib "P5DLL.dll" (ByVal mode As Long)
Public Declare Sub P5_SetFilterMode Lib "P5DLL.dll" (ByVal filters As Long)
Public Declare Sub P5_SetFilterAmount Lib "P5DLL.dll" (ByVal ExtraFrames As Long, ByVal DeadDistance As Single)
Public Declare Sub P5_ClearArchive Lib "P5DLL.dll" (Optional ByVal P5Id As Long = -1)
Public Declare Sub P5_SetRequiredAccuracy Lib "P5DLL.dll" (Optional ByVal accuracy As Single = 10)
Public Declare Sub P5_SetPrediction Lib "P5DLL.dll" (Optional ByVal prediction As Long = 1)

' Mouse
Public Declare Sub P5_RestoreMouse Lib "P5DLL.dll" (Optional ByVal P5Id As Long = -1)
Public Declare Sub P5_UnRestoreMouse Lib "P5DLL.dll" (Optional ByVal P5Id As Long = -1)


' Low level hardware control
Public Declare Sub P5_SetFeature Lib "P5DLL.dll" (ByVal P5Id As Long, ByVal usage As Byte, ByVal numvalues As Byte, ByRef reportdata As Any)
Public Declare Sub P5_SetFeatureReport Lib "P5DLL.dll" (ByVal P5Id As Long, ByVal report As Byte, ByVal numvalues As Byte, ByRef reportdata As Any)
Public Declare Function P5_GetFeature Lib "P5DLL.dll" (ByVal P5Id As Long, ByVal usage As Byte, ByVal numvalues As Byte, ByRef reportdata As Any) As Long
Public Declare Function P5_GetFeatureReport Lib "P5DLL.dll" (ByVal P5Id As Long, ByVal report As Byte, ByVal numvalues As Byte, ByRef reportdata As Any) As Long

' Copy structures
Public Declare Sub P5_GetData Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef data As P5Data)
Public Declare Sub P5_GetState Lib "P5DLL.dll" (ByVal P5Id As Long, ByVal Frame As Long, ByRef state As P5State)
Public Declare Sub P5_GetInfo Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef info As P5Info)


' Get values stored in structures
Public Declare Sub P5_GetAbsolutePos Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef x As Single, ByRef y As Single, ByRef z As Single)
Public Declare Sub P5_GetRelativePos Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef x As Single, ByRef y As Single, ByRef z As Single)
Public Declare Sub P5_GetRelativeAvgPos Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef x As Single, ByRef y As Single, ByRef z As Single)
Public Declare Sub P5_GetRotation Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef yaw As Single, ByRef pitch As Single, ByRef roll As Single)
Public Declare Sub P5_GetFingerBends Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef thumb As Single, ByRef index As Single, ByRef middle As Single, ByRef ring As Single, ByRef pinky As Single)
Public Declare Sub P5_GetButtons Lib "P5DLL.dll" (ByVal P5Id As Long, ByRef A As Single, ByRef B As Single, ByRef C As Single, ByRef D As Single)
Public Declare Function P5_GetThreadStatus Lib "P5DLL.dll" (ByVal P5Id As Long) As Boolean



